z-index issue

--- a/includes/customizer/assets/style.scss
+++ b/includes/customizer/assets/style.scss
@@ -35,7 +35,7 @@ body.wp-customizer-unloading::before {
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 9999;
+    z-index: 99999;
     width: 100%;
     height: 100%;
     background-color: #f0f0f1;
@@ -48,7 +48,7 @@ body.wp-customizer-unloading::before {
 body.wp-customizer-unloading::after {
     content: '';
     position: fixed;
-    z-index: 10000;
+    z-index: 100000;
     width: 120px;
     height: 120px;
     background-image: url(./logo.svg);
